--- a/app/src/main/res/layout/activity_opened_file.xml
+++ b/app/src/main/res/layout/activity_opened_file.xml
@@ -8,10 +8,26 @@
     <include
         android:id="@+id/toolbar"
         layout="@layout/toolbar" />
-    <ImageView
-        android:id="@+id/FullScr"
-        android:layout_height="fill_parent"
-        android:layout_width="fill_parent">
+    <LinearLayout android:layout_height="match_parent"
+        android:layout_width="match_parent"
+        android:orientation="vertical">
+        <ImageView
+            android:id="@+id/FullScr"
+            android:layout_weight="5"
+            android:layout_height="fill_parent"
+            android:layout_width="fill_parent">
+        </ImageView>
+        <TextView
+            android:id="@+id/scanned"
+            android:layout_width="match_parent"
+            android:scrollbars = "vertical"
+            android:layout_weight="10"
+            android:layout_gravity="center_horizontal|bottom"
+            android:text="Text"
+            android:textColor="@color/colorTopBar"
+            android:textSize="20sp"
+            android:layout_height="match_parent">
 
-    </ImageView>
+        </TextView>
+    </LinearLayout>
 </RelativeLayout>
