--- a/app/src/main/res/drawable/bg_splashscreen.xml
+++ b/app/src/main/res/drawable/bg_splashscreen.xml
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layer-list xmlns:android="http://schemas.android.com/apk/res/android">
 <item android:drawable="@color/colorTopBar"/>
-
 <item>
-    <bitmap android:src="@drawable/logo_5"
+    <bitmap android:src="@drawable/solid_logo2"
         android:gravity="center"
         />
+
 </item>
 </layer-list>
